[gd_scene load_steps=3 format=3 uid="uid://ssmrmcx8ya76"]

[ext_resource type="Script" path="res://map/star_map.gd" id="1"]
[ext_resource type="FontFile" uid="uid://d33k0h6vwcvfv" path="res://ui/fonts/Kenney Pixel.ttf" id="2_y8odc"]

[node name="StarMap" type="Control"]
custom_minimum_size = Vector2(920, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1")

[node name="Lines" type="Node2D" parent="."]

[node name="Route" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Content" type="VBoxContainer" parent="Route"]
layout_mode = 2

[node name="Header" type="Label" parent="Route/Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 48
text = "Route Information"

[node name="Waves" type="VBoxContainer" parent="Route/Content"]
layout_mode = 2

[node name="Label" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 1"

[node name="Label2" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 2"

[node name="Label3" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 3"

[node name="Label4" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 4"

[node name="Label5" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 5"

[node name="Label6" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 6"

[node name="Label7" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 7"

[node name="Label8" type="Label" parent="Route/Content/Waves"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Map Node 8"

[node name="Header2" type="Label" parent="Route/Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 48
text = "Wave Information"

[node name="WaveInfo" type="Label" parent="Route/Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Hover Info"

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -68.0
grow_horizontal = 0
grow_vertical = 0

[node name="BtnEquip" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Upgrade Ship
"

[node name="BtnReroll" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Reroll Map
"

[node name="BtnRun" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Confirm Course"

[node name="BtnQuit" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 32
text = "Quit to Menu"

[node name="RouteEnd" type="Label" parent="."]
layout_mode = 0
offset_left = 262.0
offset_top = 36.0
offset_right = 409.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 48
text = "Route End"

[node name="RouteStart" type="Label" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 616.0
offset_right = 415.0
offset_bottom = 652.0
theme_override_fonts/font = ExtResource("2_y8odc")
theme_override_font_sizes/font_size = 48
text = "Route Start"

[connection signal="pressed" from="Buttons/BtnEquip" to="." method="_on_btn_equip_pressed"]
[connection signal="pressed" from="Buttons/BtnReroll" to="." method="_on_btn_reroll_pressed"]
[connection signal="pressed" from="Buttons/BtnRun" to="." method="_on_btn_run_pressed"]
[connection signal="pressed" from="Buttons/BtnQuit" to="." method="_on_btn_quit_pressed"]
